PL2Proc/antlr/gramaticas/GramaticacompilerParser.java
// Generated from GramaticacompilerParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticacompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INCLUDE=1, MAIN=2, FUNCTION=3, TIPONUMERO=4, TIPOCADENA=5, TIPOVOID=6, 
		THEN=7, IF=8, ELSE=9, CONDICIONES=10, ENDIF=11, BEGIN=12, END=13, DEVOLVER=14, 
		WHILE=15, FOR=16, SWITCH=17, CASE=18, BREAK=19, DEFAULT=20, ENDSWITCH=21, 
		DOSPUNTOS=22, PUNTO=23, COMA=24, PI=25, PD=26, PC=27, BB=28, ADD=29, MINUS=30, 
		PRODUCT=31, DIVISION=32, ASIGNACION=33, PORCENTAJE=34, MENORQUE=35, MAYORQUE=36, 
		IGUALQUE=37, DISTINTOQUE=38, ADD1=39, SUBSTRACT1=40, NEWLINE=41, CADENA=42, 
		ID=43, DIGITO=44, WS=45, COMENTARIO_LINEA=46, COMENTARIO_LINEA2=47, COMENTARIO_BLOQUE1=48, 
		COMENTARIO_BLOQUE2=49;
	public static final int
		RULE_prog = 0, RULE_include = 1, RULE_asignacion = 2, RULE_variable = 3, 
		RULE_funcionwhile = 4, RULE_funcionfor = 5, RULE_funcionswitch = 6, RULE_cuerposwitch = 7, 
		RULE_condicionales = 8, RULE_numeros = 9, RULE_devolver = 10, RULE_codigo = 11, 
		RULE_func = 12, RULE_cabecerafuncion = 13, RULE_tiporetorno = 14, RULE_crearfuncion = 15, 
		RULE_llamarfuncion = 16, RULE_parametros = 17, RULE_expr = 18, RULE_exprlog = 19, 
		RULE_tipo = 20, RULE_asignador = 21, RULE_entero = 22, RULE_flotante = 23, 
		RULE_nombrevariable = 24, RULE_nombrefuncion = 25, RULE_nomlib = 26, RULE_punto = 27, 
		RULE_puntocoma = 28, RULE_coma = 29, RULE_dospuntos = 30, RULE_abrirparentesis = 31, 
		RULE_cerrarparentesis = 32, RULE_add1 = 33, RULE_substract1 = 34, RULE_cadena = 35, 
		RULE_opsuma = 36, RULE_opresta = 37, RULE_opmult = 38, RULE_opdiv = 39, 
		RULE_oplog = 40, RULE_keywordinclude = 41, RULE_keywordwhile = 42, RULE_keywordfor = 43, 
		RULE_keywordcond = 44, RULE_keywordmain = 45, RULE_keywordfunc = 46, RULE_keywordreturn = 47, 
		RULE_keywordbegin = 48, RULE_keywordend = 49, RULE_keywordswitch = 50, 
		RULE_keywordcase = 51, RULE_keywordbreak = 52, RULE_keyworddefault = 53, 
		RULE_keywordendswitch = 54, RULE_keywordthen = 55, RULE_keywordendif = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "include", "asignacion", "variable", "funcionwhile", "funcionfor", 
			"funcionswitch", "cuerposwitch", "condicionales", "numeros", "devolver", 
			"codigo", "func", "cabecerafuncion", "tiporetorno", "crearfuncion", "llamarfuncion", 
			"parametros", "expr", "exprlog", "tipo", "asignador", "entero", "flotante", 
			"nombrevariable", "nombrefuncion", "nomlib", "punto", "puntocoma", "coma", 
			"dospuntos", "abrirparentesis", "cerrarparentesis", "add1", "substract1", 
			"cadena", "opsuma", "opresta", "opmult", "opdiv", "oplog", "keywordinclude", 
			"keywordwhile", "keywordfor", "keywordcond", "keywordmain", "keywordfunc", 
			"keywordreturn", "keywordbegin", "keywordend", "keywordswitch", "keywordcase", 
			"keywordbreak", "keyworddefault", "keywordendswitch", "keywordthen", 
			"keywordendif"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'include'", "'main'", "'function'", "'numero'", "'cadena'", "'void'", 
			"'then'", "'if'", "'else'", null, "'endif'", "'begin'", "'end'", "'devolver'", 
			"'while'", "'for'", "'switch'", "'case'", "'break'", "'default'", "'endswitch'", 
			"':'", "'.'", "','", "'('", "')'", "';'", "'_'", "'+'", "'-'", "'*'", 
			"'/'", "':='", "'%'", "'<'", "'>'", "'=='", "'!='", "'++'", "'--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INCLUDE", "MAIN", "FUNCTION", "TIPONUMERO", "TIPOCADENA", "TIPOVOID", 
			"THEN", "IF", "ELSE", "CONDICIONES", "ENDIF", "BEGIN", "END", "DEVOLVER", 
			"WHILE", "FOR", "SWITCH", "CASE", "BREAK", "DEFAULT", "ENDSWITCH", "DOSPUNTOS", 
			"PUNTO", "COMA", "PI", "PD", "PC", "BB", "ADD", "MINUS", "PRODUCT", "DIVISION", 
			"ASIGNACION", "PORCENTAJE", "MENORQUE", "MAYORQUE", "IGUALQUE", "DISTINTOQUE", 
			"ADD1", "SUBSTRACT1", "NEWLINE", "CADENA", "ID", "DIGITO", "WS", "COMENTARIO_LINEA", 
			"COMENTARIO_LINEA2", "COMENTARIO_BLOQUE1", "COMENTARIO_BLOQUE2"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GramaticacompilerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticacompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<CrearfuncionContext> crearfuncion() {
			return getRuleContexts(CrearfuncionContext.class);
		}
		public CrearfuncionContext crearfuncion(int i) {
			return getRuleContext(CrearfuncionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(118);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(114);
					include();
					}
					break;
				case 2:
					{
					setState(115);
					expr(0);
					}
					break;
				case 3:
					{
					setState(116);
					asignacion();
					}
					break;
				case 4:
					{
					setState(117);
					crearfuncion();
					}
					break;
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INCLUDE) | (1L << FUNCTION) | (1L << TIPONUMERO) | (1L << TIPOCADENA) | (1L << TIPOVOID) | (1L << WHILE) | (1L << FOR) | (1L << PUNTO) | (1L << PI) | (1L << CADENA) | (1L << ID) | (1L << DIGITO))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public List<KeywordincludeContext> keywordinclude() {
			return getRuleContexts(KeywordincludeContext.class);
		}
		public KeywordincludeContext keywordinclude(int i) {
			return getRuleContext(KeywordincludeContext.class,i);
		}
		public List<NomlibContext> nomlib() {
			return getRuleContexts(NomlibContext.class);
		}
		public NomlibContext nomlib(int i) {
			return getRuleContext(NomlibContext.class,i);
		}
		public List<PuntocomaContext> puntocoma() {
			return getRuleContexts(PuntocomaContext.class);
		}
		public PuntocomaContext puntocoma(int i) {
			return getRuleContext(PuntocomaContext.class,i);
		}
		public List<PuntoContext> punto() {
			return getRuleContexts(PuntoContext.class);
		}
		public PuntoContext punto(int i) {
			return getRuleContext(PuntoContext.class,i);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).exitInclude(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_include);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(134); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(122);
					keywordinclude();
					setState(123);
					nomlib();
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==PUNTO) {
						{
						{
						setState(124);
						punto();
						setState(125);
						nomlib();
						}
						}
						setState(131);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(132);
					puntocoma();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(136); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public NombrevariableContext nombrevariable() {
			return getRuleContext(NombrevariableContext.class,0);
		}
		public AsignadorContext asignador() {
			return getRuleContext(AsignadorContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public PuntocomaContext puntocoma() {
			return getRuleContext(PuntocomaContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).exitAsignacion(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_asignacion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TIPONUMERO) | (1L << TIPOCADENA) | (1L << TIPOVOID))) != 0)) {
				{
				setState(138);
				tipo();
				}
			}

			setState(141);
			nombrevariable();
			setState(142);
			asignador();
			setState(143);
			expr(0);
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(144);
				puntocoma();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public NombrevariableContext nombrevariable() {
			return getRuleContext(NombrevariableContext.class,0);
		}
		public AsignadorContext asignador() {
			return getRuleContext(AsignadorContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TIPONUMERO) | (1L << TIPOCADENA) | (1L << TIPOVOID))) != 0)) {
				{
				setState(147);
				tipo();
				}
			}

			setState(150);
			nombrevariable();
			setState(151);
			asignador();
			setState(152);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionwhileContext extends ParserRuleContext {
		public KeywordwhileContext keywordwhile() {
			return getRuleContext(KeywordwhileContext.class,0);
		}
		public AbrirparentesisContext abrirparentesis() {
			return getRuleContext(AbrirparentesisContext.class,0);
		}
		public ExprlogContext exprlog() {
			return getRuleContext(ExprlogContext.class,0);
		}
		public CerrarparentesisContext cerrarparentesis() {
			return getRuleContext(CerrarparentesisContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public FuncionwhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionwhile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).enterFuncionwhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).exitFuncionwhile(this);
		}
	}

	public final FuncionwhileContext funcionwhile() throws RecognitionException {
		FuncionwhileContext _localctx = new FuncionwhileContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcionwhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			keywordwhile();
			setState(155);
			abrirparentesis();
			setState(156);
			exprlog();
			setState(157);
			cerrarparentesis();
			setState(158);
			func();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionforContext extends ParserRuleContext {
		public KeywordforContext keywordfor() {
			return getRuleContext(KeywordforContext.class,0);
		}
		public AbrirparentesisContext abrirparentesis() {
			return getRuleContext(AbrirparentesisContext.class,0);
		}
		public CerrarparentesisContext cerrarparentesis() {
			return getRuleContext(CerrarparentesisContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<NombrevariableContext> nombrevariable() {
			return getRuleContexts(NombrevariableContext.class);
		}
		public NombrevariableContext nombrevariable(int i) {
			return getRuleContext(NombrevariableContext.class,i);
		}
		public List<PuntocomaContext> puntocoma() {
			return getRuleContexts(PuntocomaContext.class);
		}
		public PuntocomaContext puntocoma(int i) {
			return getRuleContext(PuntocomaContext.class,i);
		}
		public ExprlogContext exprlog() {
			return getRuleContext(ExprlogContext.class,0);
		}
		public Add1Context add1() {
			return getRuleContext(Add1Context.class,0);
		}
		public Substract1Context substract1() {
			return getRuleContext(Substract1Context.class,0);
		}
		public FuncionforContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionfor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).enterFuncionfor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).exitFuncionfor(this);
		}
	}

	public final FuncionforContext funcionfor() throws RecognitionException {
		FuncionforContext _localctx = new FuncionforContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcionfor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			keywordfor();
			setState(161);
			abrirparentesis();
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(162);
				variable();
				}
				break;
			case 2:
				{
				setState(163);
				nombrevariable();
				}
				break;
			}
			{
			setState(166);
			puntocoma();
			setState(167);
			exprlog();
			}
			setState(177);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PC:
				{
				setState(169);
				puntocoma();
				setState(170);
				variable();
				}
				break;
			case ID:
				{
				setState(172);
				nombrevariable();
				setState(175);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ADD1:
					{
					setState(173);
					add1();
					}
					break;
				case SUBSTRACT1:
					{
					setState(174);
					substract1();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(179);
			cerrarparentesis();
			setState(180);
			func();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionswitchContext extends ParserRuleContext {
		public KeywordswitchContext keywordswitch() {
			return getRuleContext(KeywordswitchContext.class,0);
		}
		public AbrirparentesisContext abrirparentesis() {
			return getRuleContext(AbrirparentesisContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CerrarparentesisContext cerrarparentesis() {
			return getRuleContext(CerrarparentesisContext.class,0);
		}
		public CuerposwitchContext cuerposwitch() {
			return getRuleContext(CuerposwitchContext.class,0);
		}
		public FuncionswitchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionswitch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).enterFuncionswitch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).exitFuncionswitch(this);
		}
	}

	public final FuncionswitchContext funcionswitch() throws RecognitionException {
		FuncionswitchContext _localctx = new FuncionswitchContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcionswitch);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			keywordswitch();
			setState(183);
			abrirparentesis();
			setState(184);
			expr(0);
			setState(185);
			cerrarparentesis();
			setState(186);
			cuerposwitch();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerposwitchContext extends ParserRuleContext {
		public List<KeywordcaseContext> keywordcase() {
			return getRuleContexts(KeywordcaseContext.class);
		}
		public KeywordcaseContext keywordcase(int i) {
			return getRuleContext(KeywordcaseContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<DospuntosContext> dospuntos() {
			return getRuleContexts(DospuntosContext.class);
		}
		public DospuntosContext dospuntos(int i) {
			return getRuleContext(DospuntosContext.class,i);
		}
		public List<PuntocomaContext> puntocoma() {
			return getRuleContexts(PuntocomaContext.class);
		}
		public PuntocomaContext puntocoma(int i) {
			return getRuleContext(PuntocomaContext.class,i);
		}
		public KeyworddefaultContext keyworddefault() {
			return getRuleContext(KeyworddefaultContext.class,0);
		}
		public List<KeywordbreakContext> keywordbreak() {
			return getRuleContexts(KeywordbreakContext.class);
		}
		public KeywordbreakContext keywordbreak(int i) {
			return getRuleContext(KeywordbreakContext.class,i);
		}
		public List<CodigoContext> codigo() {
			return getRuleContexts(CodigoContext.class);
		}
		public CodigoContext codigo(int i) {
			return getRuleContext(CodigoContext.class,i);
		}
		public CuerposwitchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerposwitch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).enterCuerposwitch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).exitCuerposwitch(this);
		}
	}

	public final CuerposwitchContext cuerposwitch() throws RecognitionException {
		CuerposwitchContext _localctx = new CuerposwitchContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cuerposwitch);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(201); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(188);
					keywordcase();
					setState(189);
					expr(0);
					setState(190);
					dospuntos();
					setState(192); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(191);
						codigo();
						}
						}
						setState(194); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TIPONUMERO) | (1L << TIPOCADENA) | (1L << TIPOVOID) | (1L << CONDICIONES) | (1L << WHILE) | (1L << FOR) | (1L << SWITCH) | (1L << ID))) != 0) );
					setState(197);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==BREAK) {
						{
						setState(196);
						keywordbreak();
						}
					}

					setState(199);
					puntocoma();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(203); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(214);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(205);
				keyworddefault();
				setState(206);
				dospuntos();
				setState(208); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(207);
					expr(0);
					}
					}
					setState(210); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << FOR) | (1L << PUNTO) | (1L << PI) | (1L << CADENA) | (1L << ID) | (1L << DIGITO))) != 0) );
				setState(212);
				keywordbreak();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalesContext extends ParserRuleContext {
		public KeywordcondContext keywordcond() {
			return getRuleContext(KeywordcondContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public KeywordendifContext keywordendif() {
			return getRuleContext(KeywordendifContext.class,0);
		}
		public AbrirparentesisContext abrirparentesis() {
			return getRuleContext(AbrirparentesisContext.class,0);
		}
		public ExprlogContext exprlog() {
			return getRuleContext(ExprlogContext.class,0);
		}
		public CerrarparentesisContext cerrarparentesis() {
			return getRuleContext(CerrarparentesisContext.class,0);
		}
		public KeywordthenContext keywordthen() {
			return getRuleContext(KeywordthenContext.class,0);
		}
		public CondicionalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionales; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).enterCondicionales(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticacompilerParserListener ) ((GramaticacompilerParserListener)listener).exitCondicionales(this);
		}
	}

	public final CondicionalesContext condicionales() throws RecognitionException {
		CondicionalesContext _localctx = new CondicionalesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_condicionales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216);
			keywordcond();
			setState(221);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PI) {
				{
				setState(217);
				abrirparentesis();
				setState(218);
				exprlog();
				setState(219);
				cerrarparentesis();
				}
			}

			setState(224);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THEN) {
				{
				setState(223);
				keywordthen();
				}
			}

			setState(226);
			func();
			setState(227);
			keywordendif();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
